[gd_scene load_steps=15 format=3 uid="uid://c54q3w8x83bvy"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_asws1"]
[ext_resource type="Texture2D" uid="uid://cn0wo2ob01rp5" path="res://assets/backgrounds/dungeon.png" id="2_adpv3"]
[ext_resource type="PackedScene" uid="uid://cq1spio55fri5" path="res://scenes/player.tscn" id="3_c1jyx"]
[ext_resource type="Resource" uid="uid://bpotk0iawswxw" path="res://characters/basic_character/basic_character_stats.tres" id="4_1sc41"]
[ext_resource type="PackedScene" uid="uid://b3fal1tr5tm0n" path="res://scenes/enemy.tscn" id="4_tbyj5"]
[ext_resource type="Theme" uid="uid://d1b5jw5e7ipk8" path="res://themes/text_theme.tres" id="5_fuffh"]
[ext_resource type="Script" path="res://scripts/hand.gd" id="6_m648t"]
[ext_resource type="Resource" uid="uid://bajj1bjvkp1ah" path="res://enemies/basic_enemy/basic_enemy.tres" id="6_w1u6o"]
[ext_resource type="PackedScene" uid="uid://n0oe3yw1kh1r" path="res://scenes/mana.tscn" id="7_ighbd"]
[ext_resource type="PackedScene" uid="uid://brw27jx0n5hvs" path="res://scenes/card_target_selector.tscn" id="7_tx7vl"]
[ext_resource type="Script" path="res://scenes/card_pile_ui.gd" id="11_72ynn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kd1ws"]
size = Vector2(159, 123)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmdhh"]
bg_color = Color(0.156863, 0.145098, 0.160784, 0.537255)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vft8"]
bg_color = Color(0.686275, 0.572549, 0.505882, 1)

[node name="level" type="Node2D"]
script = ExtResource("1_asws1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -41)
zoom = Vector2(4, 4)

[node name="Sprite2D" type="Sprite2D" parent="Camera2D"]
z_index = -1
position = Vector2(-9.53674e-07, 0)
scale = Vector2(0.187907, 0.210286)
texture = ExtResource("2_adpv3")

[node name="Player" parent="." instance=ExtResource("3_c1jyx")]
position = Vector2(-97, 14)
stats = ExtResource("4_1sc41")

[node name="Enemy" parent="." instance=ExtResource("4_tbyj5")]
position = Vector2(85, 18)
stats = ExtResource("6_w1u6o")

[node name="CardTargetSelector" parent="." instance=ExtResource("7_tx7vl")]

[node name="CardDropArea" type="Area2D" parent="."]
position = Vector2(16, -12)
scale = Vector2(1.82084, 0.933232)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(-8.5, -60.5)
shape = SubResource("RectangleShape2D_kd1ws")

[node name="CanvasLayer" type="CanvasLayer" parent="." groups=["ui_layer"]]
follow_viewport_enabled = true

[node name="BannerLabel" type="Label" parent="CanvasLayer"]
offset_left = -76.0
offset_top = -112.0
offset_right = 76.0
offset_bottom = -89.0
theme = ExtResource("5_fuffh")
text = "TurnText"
horizontal_alignment = 1

[node name="EndTurn" type="Button" parent="CanvasLayer"]
offset_left = 102.0
offset_top = 17.0
offset_right = 170.0
offset_bottom = 49.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5_fuffh")
theme_override_font_sizes/font_size = 8
text = "End turn"

[node name="SeedLabel" type="Button" parent="CanvasLayer"]
offset_left = 86.0
offset_top = -114.0
offset_right = 196.0
offset_bottom = -92.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5_fuffh")
theme_override_colors/font_color = Color(1, 1, 1, 0.258824)
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_vmdhh")
text = "Seed: 12345"

[node name="LevelNameLabel" type="Label" parent="CanvasLayer"]
offset_left = -135.0
offset_top = -111.0
offset_right = -75.0
offset_bottom = -100.0
theme = ExtResource("5_fuffh")
text = "Level 1"

[node name="Hand" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -608.0
offset_right = -576.0
offset_bottom = -608.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
alignment = 1
script = ExtResource("6_m648t")

[node name="ManaUI" parent="CanvasLayer" instance=ExtResource("7_ighbd")]
offset_left = -139.0
offset_top = -630.0
offset_right = -59.0
offset_bottom = -590.0
scale = Vector2(0.5, 0.5)
char_stats = ExtResource("4_1sc41")

[node name="DiscardPile" type="Panel" parent="CanvasLayer"]
offset_left = -95.0
offset_top = 19.0
offset_right = -80.0
offset_bottom = 39.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4vft8")
script = ExtResource("11_72ynn")

[node name="Label" type="Label" parent="CanvasLayer/DiscardPile"]
layout_mode = 1
offset_left = 1.0
offset_top = 1.0
offset_right = 22.0
offset_bottom = 9.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5_fuffh")
text = "15
"

[node name="DrawPile" type="Panel" parent="CanvasLayer"]
offset_left = 82.0
offset_top = 19.0
offset_right = 97.0
offset_bottom = 39.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4vft8")
script = ExtResource("11_72ynn")

[node name="Label" type="Label" parent="CanvasLayer/DrawPile"]
layout_mode = 1
offset_left = 1.0
offset_top = 1.0
offset_right = 22.0
offset_bottom = 9.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5_fuffh")
text = "15
"

[connection signal="child_entered_tree" from="CanvasLayer/Hand" to="CanvasLayer/Hand" method="_on_child_entered_tree"]
[connection signal="sort_children" from="CanvasLayer/Hand" to="." method="_on_hand_sort_children"]
